--- a/stylesheets/shortcodes.css
+++ b/stylesheets/shortcodes.css
@@ -998,6 +998,9 @@ ul.curriculum li ul.section-content li.course-lesson .question:before {
 -------------------------------------------------------------- */
 .flat-course {
     border-radius: 3px;
+    border-top: 1px solid gainsboro;
+    border-left: 1px solid gainsboro;
+    box-shadow: 2px 2px 2px 2px gainsboro;
 }
 
 .flat-course img {
@@ -1055,10 +1058,10 @@ ul.curriculum li ul.section-content li.course-lesson .question:before {
 .flat-course .course-content {
     position: relative;
     padding: 28px 29px 24px;
-    border-left: 1px solid #e5e5e5;
-    border-right: 1px solid #e5e5e5;
-    border-bottom: 3px solid #e5e5e5;    
-    box-shadow: 0px 2px 0px 0px rgba(229, 229, 229, 1) ; 
+    border-top: 1px solid #e5e5e5;
+    /* border-right: 1px solid #e5e5e5; */
+    /* border-bottom: 3px solid #e5e5e5; */
+    /* box-shadow: 0px 2px 0px 0px rgba(229, 229, 229, 1); */
     line-height: 22px;
 }
 
